2018-06-10  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_form_data): Don't cast value to ptrdiff_t, cast
	ptrdiff_t to size_t.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_rnglists_section): Calculate max_entries
	instead of needed bytes to prevent overflowing. Always print
	max_entries (but not more).
	(print_debug_loclists_section): Likewise.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_line_section): Stop printing directories
	and files when we are at the end of the unit data.

2018-06-07  Mark Wielaard  <mark@klomp.org>

	* readelf.c (format_result): Removed.
	(format_result_size): Removed.
	(format_dwarf_addr): Renamed to...
	(print_dwarf_addr): ...this. Simply call printf, don't setup buffer,
	don't call sprintf.
	(print_ops): Use print_dwarf_addr instead of format_dwarf_addr.
	(print_debug_addr_section): Likewise.
	(print_debug_aranges_section): Likewise.
	(print_debug_rnglists_section): Likewise.
	(print_debug_ranges_section): Likewise.
	(print_debug_frame_section): Likewise.
	(attr_callback): Likewise.
	(print_decoded_line_section): Likewise.
	(print_debug_line_section): Likewise.
	(print_debug_loclists_section): Likewise.
	(print_debug_loc_section): Likewise.
	(print_gdb_index_section): Likewsie.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_addr_section): Set unit_length always to
	(next_unitp - readp) in case we don't have a real header.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_loc_section): Set begin to idx when failing
	to read the start address if DW_LLE_GNU_start_end_entry.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_sysv_hash): Don't leak lengths array when
	detecting an invalid chain.
	(handle_sysv_hash64): Likewise.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_macro_section): Extend vendor array by one
	to include max DW_MACRO_hi_user opcode.
